--- a/templates/account/Login.html
+++ b/templates/account/Login.html
@@ -74,7 +74,7 @@
             </div>
             <div class="flex flex-col relative 2xl:mb-20 mb-10">
               <a
-                href="./Accueil.html"
+                href="{% url 'dashboard:index' %}"
                 class='py-5 leading-4 text-sm border text-white rounded uppercase bg-[#DEDEDE]'
                 
               >
