--- a/templates/home/Home.html
+++ b/templates/home/Home.html
@@ -38,7 +38,7 @@
           </h3>
         </div>
         <div>
-          <a href="./Login.html">
+          <a href="{% url 'account:index' %}">
             <button
               type="button"
               class="border px-5 py-2.5 text-[14px] lg:px-[62px] lg:py-5 lg:text-[14px] border-white-300 rounded-md text-white uppercase mt-20 hover:cursor-pointer"
