--- a/templates/home/Home.html
+++ b/templates/home/Home.html
@@ -1,9 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/Home.css">
+  <link rel="stylesheet" href="{% static '/hairunsi/Home.css' %}">
   <title>HairunSI</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -24,7 +26,7 @@
       <div class="absolute md:w-1/3 text-center z-50 flex flex-col justify-center">
         <div class="flex justify-center items-center">
           <img
-            src="./public/images/logo/logo-hairun.png"
+            src="{% static '/hairunsi/images/logo/logo-hairun.png' %}"
             class="logo flex justify-center items-center"
             alt=""
           />
